--- a/src/pages/ccip/tutorials/cross-chain-tokens-from-eoa.mdx
+++ b/src/pages/ccip/tutorials/cross-chain-tokens-from-eoa.mdx
@@ -17,7 +17,7 @@ import { CodeSample, ClickToZoom, CopyText, Aside } from "@components"
 In this tutorial, you will use Chainlink CCIP to transfer tokens directly from your [EOA (Externally Owned Account)](https://ethereum.org/en/developers/docs/accounts/#types-of-account) to an account on a different blockchain. First, you will pay for CCIP fees on the source blockchain using LINK. Then, you will run the same example paying for CCIP fees in native gas, such as ETH on Ethereum or MATIC on Polygon.
 
 <Aside type="note" title="Node Operator Rewards">
-  CCIP rewards the oracle node and ARM node operators in LINK.
+  CCIP rewards the oracle node and Risk Management node operators in LINK.
 </Aside>
 
 <Aside type="caution" title="Transferring tokens">
