--- a/src/pages/ccip/tutorials/programmable-token-transfers.mdx
+++ b/src/pages/ccip/tutorials/programmable-token-transfers.mdx
@@ -18,7 +18,7 @@ import CcipCommon from "@features/ccip/CcipCommon.astro"
 In this tutorial, you will use Chainlink CCIP to transfer tokens and arbitrary data between smart contracts on different blockchains. First, you will pay for the CCIP fees on the source blockchain using LINK. Then, you will use the same contract to pay CCIP fees in native gas tokens. For example, you would use ETH on Ethereum or MATIC on Polygon.
 
 <Aside type="note" title="Node Operator Rewards">
-  CCIP rewards the oracle node and ARM node operators in LINK.
+  CCIP rewards the oracle node and Risk Management node operators in LINK.
 </Aside>
 
 <Aside type="caution" title="Transferring tokens">
