--- a/src/pages/chainlink-nodes/resources/requirements.mdx
+++ b/src/pages/chainlink-nodes/resources/requirements.mdx
@@ -7,7 +7,7 @@ title: "Requirements"
 
 ## Hardware
 
-The requirements for running a Chainlink node scale with the as the number of jobs that your node services. CPUs with the x86 architecture is recommended for production environments, but you can use Apple M1 ARM systems for development if you run the Chainlink node in Docker.
+The requirements for running a Chainlink node scale with the as the number of jobs that your node services. CPUs with the x86 architecture is recommended for production environments, but you can use Apple M1 systems for development if you run the Chainlink node in Docker.
 
 - Minimum: At least **2 CPU cores** and **4 GB of RAM** will allow you to get a node running for testing and basic development.
 - Recommended: For nodes in a production environment with over 100 jobs, you will need at least **4 CPU cores** and **8GB of RAM**.
