Fix typo EOA address by EOA in CCIP page

--- a/src/pages/ccip/best-practices.mdx
+++ b/src/pages/ccip/best-practices.mdx
@@ -32,7 +32,7 @@ When you implement the `ccipReceive` [method](/ccip/api-reference/CCIPReceiver#c
 
 The `gasLimit` specifies the maximum amount of gas CCIP can consume to execute `ccipReceive()` on the contract located on the destination blockchain. It is the main factor in determining the fee to send a message. Unspent gas is not refunded.
 
-To transfer tokens directly to an EOA address as a _receiver_ on the destination blockchain, the `gasLimit` should be set to `0` since there is no `ccipReceive()` implementation to call.
+To transfer tokens directly to an EOA as a _receiver_ on the destination blockchain, the `gasLimit` should be set to `0` since there is no `ccipReceive()` implementation to call.
 
 To estimate the accurate gas limit for your destination contract, consider the following options:
 
