--- a/templates/getting-started.mdx
+++ b/templates/getting-started.mdx
@@ -2,7 +2,11 @@
 layout: ../../layouts/MainLayout.astro
 section: vrf
 title: "Page Title"
-whatsnext: { "Try out the advanced tutorial": "/product-path/tutorials/advanced" }
+whatsnext:
+  {
+    "Try out the advanced tutorial": "/product-path/tutorials/advanced",
+    "Get a random number using VRF": "/vrf/v2/subscription/examples/get-a-random-number",
+  }
 ---
 
 {/\*
@@ -13,7 +17,7 @@ Fill out the fields in the frontmatter above.
 - Whats Next: A list of pages to include in the What's Next section. Preferably imperative sentences describing the goal of the next page.
   \*/}
 
-{/* Imports if necessary */}
+{/* Import components when necessary */}
 import { Aside } from "@components"
 import { YouTube } from "@astro-community/astro-embed-youtube"
 
@@ -45,7 +49,9 @@ Before you start this guide, you need the following items:
 
 {/* Heading names with ## <h2> style. If <h3> or <h4> are required for sub-sections, add more # characters. */}
 
-## Setup steps
+## Setup the example
+
+{/* Rename this heading to an imperative sentence relevant and specific to the task in this guide */}
 
 {/* Brief description of what components you are setting up and why it is necessary for the guide. */}
 Run `./setup-example` to install the required config files.
@@ -75,7 +81,9 @@ Run `./setup-example` to install the required config files.
 
 1. {/* Step 3 */}
 
-## Run steps
+## Run the example
+
+{/* Rename this heading to an imperative sentence relevant and specific to the task in this guide */}
 
 {/* Brief description for running the example and what is happening; what running the example demonstrates. */}
 Run the example in a terminal. When you are done, you will have the example output.
@@ -105,3 +113,11 @@ Run the example in a terminal. When you are done, you will have the example outp
 ## Summary (Optional)
 
 {/* Add an optional summary leading into the What's Next links. */}
+
+This example used the following parameters:
+
+| Parameter | Value |
+| --------- | ----- |
+| Param 1   | foo   |
+| Param 2   | bar   |
+| Param 3   | baz   |
