--- a/templates/tutorial.mdx
+++ b/templates/tutorial.mdx
@@ -2,7 +2,11 @@
 layout: ../../layouts/MainLayout.astro
 section: vrf
 title: "Page Title"
-whatsnext: { "Try out the advanced tutorial": "/product-path/tutorials/advanced" }
+whatsnext:
+  {
+    "Try out the advanced tutorial": "/product-path/tutorials/advanced",
+    "Get a random number using VRF": "/vrf/v2/subscription/examples/get-a-random-number",
+  }
 ---
 
 {/\*
@@ -13,8 +17,9 @@ Fill out the fields in the frontmatter above.
 - Whats Next: A list of pages to include in the What's Next section. Preferably imperative sentences describing the goal of the next page.
   \*/}
 
-{/* Imports if necessary */}
+{/* Import components when necessary */}
 import { Aside } from "@components"
+import { YouTube } from "@astro-community/astro-embed-youtube"
 
 {/* Add a brief description of the tutorial that leads into the Overview section */}
 This tutorial shows you how to build an example application.
@@ -23,7 +28,11 @@ This tutorial shows you how to build an example application.
 
 ## Overview
 
-You can use the components and code samples in this tutorial as a starting point for building your own applications.
+This tutorial connects X to Y using Z.
+
+{/* Include an architecture diagram if possible. */}
+
+<ClickToZoom src="/images/ccip/basic-architecture.png" alt="Example Architecture Diagram" />
 
 {/* Optional - A prerequisites section with an unordered list of what you need before you begin the tutorial. */}
 
@@ -37,7 +46,9 @@ Before you start this tutorial, complete the following items:
 
 {/* Heading names with ## <h2> style. If <h3> or <h4> are required for sub-sections, add more # characters. */}
 
-## Setup steps
+## Setup the example
+
+{/* Rename this heading to an imperative sentence relevant and specific to the task in this guide */}
 
 {/* A brief description of the components the user will set up in the tutorial. Include an unordered list with heading links to the sub-sections */}
 This tutorial requires you to set up two primary components:
@@ -96,7 +107,9 @@ Run `./setup-example` to install the required config files.
 
 {/* The section for running the tutorial and reaching the final result. */}
 
-## Run steps
+## Run the example
+
+{/* Rename this heading to an imperative sentence relevant and specific to the task in this guide */}
 
 {/* Brief description for running or deploying the completed tutorial result. This section should be the final section of the tutorial instructions. */}
 Run the example in a terminal. When you are done, you will have a complete running solution.
@@ -142,3 +155,11 @@ This example has the following components:
 ## Summary (Optional)
 
 {/* Add an optional summary leading into the What's Next links. */}
+
+This example used the following parameters:
+
+| Parameter | Value |
+| --------- | ----- |
+| Param 1   | foo   |
+| Param 2   | bar   |
+| Param 3   | baz   |
