--- a/src/pages/ccip/index.mdx
+++ b/src/pages/ccip/index.mdx
@@ -43,7 +43,7 @@ Blockchain interoperability protocols are important for the Web3 ecosystem and t
 
 The _Chainlink Cross-Chain Interoperability Protocol (CCIP)_ provides a single simple interface through which dApps and web3 entrepreneurs can securely meet all their cross-chain needs, including token transfers and arbitrary messaging.
 
-Given the [inherent risks of cross-chain interoperability](/resources/bridge-risks), a security-first mindset is being applied to CCIP. Some security features include an [Risk Management](/ccip/concepts#risk-management-network) network that monitors for malicious activity, decentralized oracle computation from a wide range of high-quality node operators with verifiable on-chain performance histories, and the off-chain reporting ([OCR](/architecture-overview/off-chain-reporting)) protocol, which already secures significant value on several mainnet blockchains.
+Given the [inherent risks of cross-chain interoperability](/resources/bridge-risks), a security-first mindset is being applied to CCIP. Some security features include a [Risk Management Network](/ccip/concepts#risk-management-network) that monitors for malicious activity, decentralized oracle computation from a wide range of high-quality node operators with verifiable on-chain performance histories, and the off-chain reporting ([OCR](/architecture-overview/off-chain-reporting)) protocol, which already secures significant value on several mainnet blockchains.
 
 <ClickToZoom src="/images/ccip/architecture-intro.png" alt="Chainlink CCIP Architecture" />
 
