Risk terminology update

--- a/src/content/resources/bridge-risks.mdx
+++ b/src/content/resources/bridge-risks.mdx
@@ -83,9 +83,9 @@ External verification is where a group of validator nodes are responsible for ve
 
 External verification typically requires an honest majority assumption, where a majority of the external validator nodes must behave honestly for the integrity of the cross-chain interaction to be upheld. However, additional techniques can be used to increase trust-minimization, such as:
 
-- optimistic bridge verification.
-- anti-fraud networks.
-- cryptoeconomic staking.
+- Optimistic bridge verification
+- Risk management networks
+- Cryptoeconomic staking
 
 Despite an additional trust assumption, external verification is currently the only practical way to perform cross-chain contract calls between certain types of blockchains while still providing trust-minimized guarantees. It’s also a highly generalized and extensible form of cross-chain computation that is capable of supporting more complex cross-chain applications.
 
@@ -101,7 +101,7 @@ Despite an additional trust assumption, external verification is currently the o
 </Aside>
 
 <Aside type="note" title="Optimistic bridges">
-  Optimistic bridges rely on honest watchers to monitor the bridges' operations and report any fraud. Because the
+  Optimistic bridges rely on honest watchers to monitor the bridges' operations and report any risks. Because the
   watchers of an optimistic system are permissionless, there is no way to know if there is not at least one single
   watcher monitoring the system. Therefore, the cost of a successful attack is limitless as it requires an attacker to
   know who the watchers are and hack all of them.
@@ -111,7 +111,7 @@ Here are some examples of externally verified bridges that use different techniq
 
 - [Binance bridge](https://www.binance.com/en/blog/ecosystem/introducing-binance-bridge-20-421499824684903626) is a trusted bridge using the security standards of Binance.
 - [Polygon POS bridge](https://wiki.polygon.technology/docs/develop/ethereum-polygon/pos/getting-started/) uses a proof of stake (PoS) consensus algorithm for network security.
-- [Nomad](https://docs.nomad.xyz/nomad-101/introduction) is an optimistic bridge. It uses [optimistic verification](https://docs.nomad.xyz/the-nomad-protocol/verification-mechanisms/optimistic-verification) where messages are optimistically signed on the origin chain and a timeout period is enforced on the destination. During this period, a set of actors called watchers can inspect the messages and flag any detected fraud.
+- [Nomad](https://docs.nomad.xyz/nomad-101/introduction) is an optimistic bridge. It uses [optimistic verification](https://docs.nomad.xyz/the-nomad-protocol/verification-mechanisms/optimistic-verification) where messages are optimistically signed on the origin chain and a timeout period is enforced on the destination. During this period, a set of actors called watchers can inspect the messages and flag any detected risks.
 
 #### Local verification
 
