BASE mainnet feeds (#1442)
* BASE mainnet feeds

--- a/src/content/resources/link-token-contracts.mdx
+++ b/src/content/resources/link-token-contracts.mdx
@@ -335,6 +335,19 @@ METIS is the currency that you use to pay for transactions on Metis mainnet. You
 
 ## BASE
 
+### BASE mainnet
+
+ETH is used to pay for transactions on BASE. You can use the [BASE Bridge](https://bridge.base.org/deposit) to transfer ETH from Ethereum mainnet to BASE mainnet.
+
+| Parameter      | Value                                                                                                                                                                                 |
+| :------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| `ETH_CHAIN_ID` | `8453`                                                                                                                                                                                |
+| Address        | <Address contractUrl="https://basescan.org/address/0x88038752750D7717a19F2A681eF75e65Fb714f1E" urlId="8453_0x88038752750D7717a19F2A681eF75e65Fb714f1E" urlClass="erc-token-address"/> |
+| Name           | Chainlink Token on BASE mainnet                                                                                                                                                       |
+| Symbol         | LINK                                                                                                                                                                                  |
+| Decimals       | 18                                                                                                                                                                                    |
+| Network status | [basescan.org](https://basescan.org/)                                                                                                                                                 |
+
 ### BASE Goerli testnet
 
 Testnet ETH is used to pay for transactions on BASE. Testnet ETH is available from one of the [BASE Network Faucets](https://docs.base.org/tools/network-faucets). Alternatively, you can get testnet ETH from the faucets listed at [faucetlink.to/goerli](https://faucetlink.to/goerli) and use the [BASE Bridge](https://bridge.base.org/deposit) to transfer testnet ETH from Ethereum Goerli to BASE Goerli. Testnet LINK is available at [faucets.chain.link](https://faucets.chain.link/base-testnet).
